<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_admin_nav_graph"
    app:startDestination="@id/navigation_admin_menu">

    <fragment
        android:id="@+id/navigation_admin_menu"
        android:name="com.example.pizzeriaapp.view.fragment.AdminMenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_admin_menu" />
    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.pizzeriaapp.view.fragment.AdminUserListFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_admin_user_list" />
    <fragment
        android:id="@+id/navigation_ban_list"
        android:name="com.example.pizzeriaapp.view.fragment.AdminBanListFragment"
        android:label="@string/title_ban_list"
        tools:layout="@layout/fragment_admin_ban_list" />
    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.pizzeriaapp.view.fragment.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>