<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_emp_nav_graph"
    app:startDestination="@+id/navigation_emp_orders">

    <fragment
        android:id="@+id/navigation_emp_orders"
        android:name="com.example.pizzeriaapp.view.fragment.EmployeeOrderListFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_employee_order_list" />
    <fragment
        android:id="@+id/navigation_orders_history"
        android:name="com.example.pizzeriaapp.view.fragment.EmployeeOrderHistory"
        android:label="@string/title_order_history"
        tools:layout="@layout/fragment_employee_order_history" />
    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.pizzeriaapp.view.fragment.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>