<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.pizzeriaapp.view.fragment.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="com.example.pizzeriaapp.view.fragment.RestaurantsFragment"
        android:label="@string/restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.pizzeriaapp.view.fragment.OrderListFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_order_list" />

    <fragment
        android:id="@+id/navigation_options"
        android:name="com.example.pizzeriaapp.view.fragment.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />
</navigation>