<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:background="#8C8C8C"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_date_redo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/txt_emp_order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                tools:text="20:18 13.11.2021" />

            <ImageButton
                android:id="@+id/btn_emp_order_redo"
                android:layout_width="60dp"
                android:layout_height="56dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.1"
                android:background="@drawable/round_button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_replay_24"
                android:contentDescription="@string/redo_the_order_button" />
        </LinearLayout>

            <TextView
                android:id="@+id/txt_emp_order_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="User: David"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_emp_order_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="User id: F0NO2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_emp_order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="Price: 12$"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_emp_order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="Status: Ready"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_emp_order_delivery_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="Delivery Method: "
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_emp_order_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="Payment Method: "
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_emp_order_delivery_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="?android:textColorPrimary"
                tools:text="Delivery Address: "
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/layout_buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/btn_emp_order_ban_user"
                    android:layout_width="60dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_no_accounts_24"
                    android:contentDescription="@string/ban_user_button" />
                <ImageButton
                    android:id="@+id/btn_emp_order_decline"
                    android:layout_width="60dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_block_24"
                    android:contentDescription="@string/cancel_Button" />

                <ImageButton
                    android:id="@+id/btn_emp_order_change_status"
                    android:layout_width="60dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_baseline_done_24"
                    android:contentDescription="@string/change_order_status_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_emp_order_products_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">
                <!-- Products will be added here dynamically in code -->
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>